--- a/_posts/2018-05-18-happy.markdown
+++ b/_posts/2018-05-18-happy.markdown
@@ -31,7 +31,7 @@ tags:
 
 ### 备案
 >   这个真的是重头戏.  工信部我的域名通过啦(开心到爆炸),已经可以通过我的域名访问我的个人网站哦. 
-> >  [个人网页](www.kimchanwill.com/e)
+> >  [个人网页](http://www.kimchanwill.com/e){:target="_blank"}
 
 > > 前天还搞了公安部备案. 希望近期能有一个好消息.
 
